# DeckenmalereiWiki

./: .gitignore  AGENTS.md  Infobox_Deckenmalerei.wiki  LocalSettings.php  README.md  docker-compose.yml  importer.py  install_extensions.sh  parser.py  pyproject.toml  requirements.txt  user-config.py
families/: deckenmalerei_family.py
output/: Bad_Buchau,_Fürstabtei_und_Residenz.wiki
output_jats/: Aschendorf,_Herrenhaus_und_Amtssitz_Altenkamp.xml  Berlin,_Residenzschloss_Stadtschloss.xml
pages/: Hauptseite.wiki
src/deckenmalereiwiki/: __init__.py  __main__.py  artikel_modern.py  citations.py  converter.py  generator.py  image_downloader.py  image_handler.py  image_providers.py  images.py  importer.py  importer_categories.py  importer_images.py  importer_pages.py  infobox.py  jats_converter.py  jats_generator.py  loader.py  strukturdaten.py  wikitext.py
templates/: Artikel-modern.wiki  BildMeta.wiki  ExternesBild.wiki  Infobox_Deckenmalerei.wiki  Strukturdaten.wiki  Vorlage_BildMeta.wiki
tests/: conftest.py  test_bad_buchau.py  test_bad_buchau_output.py  test_bildmeta.py  test_citations.py  test_egloffstein.py  test_generic.py  test_images.py
