[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deckenmalereiwiki"
version = "0.1.0"
description = "Parser and importer for Deckenmalerei.eu data into MediaWiki"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    "mwclient>=0.11.0",
]

[project.scripts]
deckenmalereiwiki = "deckenmalereiwiki.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/deckenmalereiwiki"]
